--- a/.github/workflows/hotfix-reminder.yml
+++ b/.github/workflows/hotfix-reminder.yml
@@ -33,6 +33,6 @@ jobs:
               owner: 'mktcode-org',
               repo: 'test',
               title: 'Hotfix review',
-              body: `Stable branch has been hotfixed. Needs review before next update. ${ github.event.push.head }`,
+              body: 'Stable branch has been hotfixed. Needs review before next update. ${{ github.event.push.payload.head }}',
               labels: ['hotfix']
             })
