--- a/.github/workflows/hotfix-reminder.yml
+++ b/.github/workflows/hotfix-reminder.yml
@@ -29,10 +29,11 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
+            console.log(github, context)
             github.rest.issues.create({
-              owner: 'mktcode-org',
-              repo: 'test',
+              owner: context.repo.owner,
+              repo: context.repo.repo,
               title: 'Hotfix review',
-              body: 'Stable branch has been hotfixed. Needs review before next update. ${{ github.event.push.payload.head }}',
+              body: `Stable branch has been hotfixed. Needs review before next update. ${context.payload.head_commit.url}`,
               labels: ['hotfix']
             })
